<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.nice.common.widget.TitleAppBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.LaserScanner.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/generate_code" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/background_password_field"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="36dp"
        android:paddingStart="12dp"
        android:paddingTop="4dp"
        android:paddingEnd="12dp"
        android:paddingBottom="4dp"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_password_field"
        android:gravity="center"
        android:maxLines="1"
        android:minHeight="36dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/button_generate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_generate"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/generate"
        app:layout_constraintBottom_toBottomOf="@id/tv_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_code"
        app:layout_constraintTop_toTopOf="@id/tv_code" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/share"
        app:layout_constraintTop_toBottomOf="@id/tv_code" />
</androidx.constraintlayout.widget.ConstraintLayout>